--- a/src/index.css
+++ b/src/index.css
@@ -25,24 +25,37 @@
   .c-space {
     @apply px-5;
   }
+  .section-container {
+    @apply min-h-screen w-full flex flex-col items-start justify-center relative overflow-hidden py-20;
+  }
   .head-text {
-    @apply text-5xl text-black font-futura_maxi_demi;
+    @apply max-sm:text-4xl text-6xl text-black font-futura_maxi_demi;
   }
   .head-semi-text {
-    @apply text-4xl font-harmonyos_sans_sc_medium bg-clip-text text-transparent bg-linear-to-r from-primary via-stone-950 to-black;
+    @apply max-sm:text-2xl text-4xl font-harmonyos_sans_sc_medium bg-clip-text text-transparent bg-linear-to-r from-primary via-stone-950 to-black;
   }
   .desc-text {
-    @apply text-lg font-harmonyos_sans_sc font-thin text-gray;
+    @apply max-sm:text-base text-lg font-harmonyos_sans_sc font-thin text-gray;
   }
   .content-text {
-    @apply text-3xl font-harmonyos_sans_sc_black text-primary;
+    @apply max-sm:text-2xl text-3xl font-harmonyos_sans_sc_black text-primary;
   }
   .nav-ul {
-    @apply flex items-center gap-4 md:gap-6 relative z-20;
+    @apply flex flex-col items-center gap-4 sm:flex-row md:gap-6 relative z-20;
+  }
+  .nav-li {
+    @apply text-neutral-400 hover:text-black max-sm:hover:bg-stone-500 max-sm:w-full max-sm:rounded-md py-2 max-sm:px-5;
+  }
+  .nav-li_a {
+    @apply text-lg md:text-base hover:text-black transition-colors;
   }
   .nav-button {
     @apply inline-flex items-center px-4 py-2.5 border border-black text-base font-medium rounded-md text-white bg-black hover:bg-white hover:text-black transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white w-32 justify-center
   }
+  .nav-sidebar {
+    @apply absolute left-0 right-0 bg-stone-200 backdrop-blur-sm transition-all duration-300 ease-in-out overflow-hidden z-20 mx-auto sm:hidden block;
+  }
+
   .line {
     @apply w-full h-0 border-b-1 border-gray-200 rounded-2xl;
   }
@@ -50,7 +63,7 @@
     @apply text-6xl font-bhnschrift text-primary tracking-tight text-left scale-x-70 scale-y-110 origin-left
   }
   .footer {
-    @apply w-full h-full p-5 px-10;
+    @apply w-full h-full p-5 px-10 max-sm:p-2 max-sm:px-3;
   }
   .footer-title {
     @apply font-black text-lg text-gray;
